Fix layout shift

--- a/addons/preview-project-description/style.css
+++ b/addons/preview-project-description/style.css
@@ -1,7 +1,7 @@
 .sa-toggle-project-preview {
   display: flex;
   align-items: center;
-  margin-left: auto;
+  margin: 0 0 auto auto;
 }
 
 .sa-toggle-project-preview > span {
